# aither

./: .gitattributes  CHANGELOG.md  GETTING_STARTED.md  PRIVACY.md  README.md  ROADMAP.md  TERMS.md  index.html  thankyou.html
.github/workflows/: ci.yml  publish.yml  pypi-publish.yml  release.yml
aither-adk/: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.adk-vllm.yml  install.ps1  install.py  install.sh  llms-full.txt  llms.txt  pyproject.toml  setup-vllm.py  test_phase1.py  test_phase23.py
aither-adk/adk/: __init__.py  a2a.py  aeon.py  agent.py  aither_bridge.py  bugreport.py  builtin_tools.py  chat.py  chronicle.py  cli.py  config.py  context.py  conversations.py  deploy.py  elysium.py  events.py  fleet.py  forge.py  gateway.py  graph_memory.py  identity.py  llmfit.py  loop_guard.py  mcp.py  mcp_server.py  memory.py  metrics.py  nanogpt.py  neurons.py  pairing.py  phonehome.py  pulse.py  registry.py  relay.py  safety.py  sandbox.py  sdk_bridge.py  server.py  services.py  setup.py  (+6 more)
aither-adk/adk/faculties/: __init__.py  code_graph.py  embeddings.py  memory_graph.py
aither-adk/adk/identities/: iris.yaml
aither-adk/adk/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai_compat.py  picolm.py
aither-adk/examples/: cloud_agent.py  cloud_server.py  full_lifecycle_test.py  hello_agent.py
aither-adk/examples/fleet/adk-test-agent/: identity.yaml
aither-adk/packaging/: build_executable.py  github-release.yml
aither-adk/packaging/brew/: aither-adk.rb
aither-adk/packaging/npm/: package.json
aither-adk/packaging/npm/scripts/: postinstall.js
aither-adk/packaging/winget/: Aitherium.ADK.yaml
aither-adk/profiles/: amd.yaml  apple_silicon.yaml  cpu_only.yaml  minimal.yaml  nvidia_high.yaml  nvidia_low.yaml  nvidia_mid.yaml  nvidia_ultra.yaml  server.yaml  standard.yaml  workstation.yaml
aither-adk/tests/: test_a2a.py  test_aeon.py  test_agent.py  test_aither_bridge.py  test_auth_middleware.py  test_builtin_tools.py  test_builtin_wiring.py  test_chat.py  test_cli.py  test_context.py  test_context_wiring.py  test_conversations.py  test_core_infra.py  test_creative_tools.py  test_elysium.py  test_events.py  test_events_wiring.py  test_federation.py  test_forge.py  test_gateway_client.py  test_graph_memory.py  test_inbound_smtp.py  test_inference_proxy.py  test_irc_server.py  test_llm_providers.py  test_llmfit.py  test_mcp_auth.py  test_mcp_server.py  test_memory.py  test_nanogpt.py  test_neurons.py  test_observability.py  test_picolm.py  test_relay.py  test_safety.py  test_safety_wiring.py  test_sandbox.py  test_server.py  test_setup.py  test_smtp.py  (+4 more)
aithersdk/: LICENSE  __init__.py  base.py  client.py  gateway.py  models.py  pyproject.toml
aithersdk/services/: __init__.py  a2a.py  context.py  conversations.py  expeditions.py  strata.py  voice.py
docker/: .env.example  docker-compose.alpha.yml
docs/: GATEWAY.md  GETTING_STARTED.md  SELF_HOSTING.md
examples/: cloud_fleet.py  custom_tools.py  federation_demo.py  multi_agent.py  openai_agent.py  openclaw_agent.py
examples/fleet/adk-test-agent/: main.py
