[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aither-adk"
version = "0.14.0"
description = "Agent development kit for AitherOS. Your hardware, your models, your data stays yours."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    { name = "Aitherium", email = "hello@aitherium.com" },
]
keywords = ["ai", "agents", "llm", "aitheros", "ollama", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
sdk = ["aithersdk>=0.1.0"]
graphs = [
    "numpy>=1.24.0",
]
embedding = [
    "sentence-transformers>=2.3.0",
    "torch>=2.0.0",
]
all = [
    "aither-adk[graphs,embedding]",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "aithersdk>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://aitherium.com"
Repository = "https://github.com/Aitherium/aither"
Documentation = "https://github.com/Aitherium/aither#readme"

[project.scripts]
# `aither` command owned by aithershell package
adk = "adk.cli:main"
adk-serve = "adk.server:main"
adk-bug = "adk.bugreport:main"

[tool.hatch.build.targets.wheel]
packages = ["adk"]

[tool.hatch.build.targets.wheel.force-include]
"docker-compose.adk-vllm.yml" = "adk/docker-compose.adk-vllm.yml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # IRC event handlers use ensure_future for async broadcast — harmless in tests
    "ignore:coroutine 'IRCServer._broadcast_to_channel' was never awaited:RuntimeWarning",
    "ignore:coroutine 'IRCServer._send_to_nick' was never awaited:RuntimeWarning",
    # CPython unittest.mock bug: AsyncMock child creation creates unawaited coroutines
    # https://github.com/python/cpython/issues/100226
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
]
