[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aithersdk"
version = "0.2.0"
description = "Python SDK for AitherOS — the canonical client library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Aitherium", email = "hello@aitherium.com" }]
keywords = ["ai", "agents", "aitheros", "sdk", "client"]

dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
async = ["httpx[http2]"]

[project.urls]
Homepage = "https://aitherium.com"
Repository = "https://github.com/Aitherium/aither"

[tool.hatch.build.targets.wheel]
packages = ["aithersdk"]
